--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -36,13 +36,16 @@ tasks:
         fluxcd/tap/flux
         go-task/tap/go-task
         helm
+        ipcalc
         jq
         kubernetes-cli
         kustomize
         pre-commit
+        prettier
         sops
         stern
         terraform
+        tflint
         weaveworks/tap/gitops
         yamllint
         yq
