--- a/kubernetes/apps/default/kubernetes-dashboard/app/rbac.yaml
+++ b/kubernetes/apps/default/kubernetes-dashboard/app/rbac.yaml
@@ -1,20 +1,20 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: admin-user
-  namespace: kubernetes-dashboard
+  name: dashboard-user
+  namespace: default
 
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: admin-user
+  name: dashboard-user
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: cluster-admin
 subjects:
   - kind: ServiceAccount
-    name: admin-user
-    namespace: kubernetes-dashboard
+    name: dashboard-user
+    namespace: default
