--- a/kubernetes/flux/repositories/helm/rook-release.yaml
+++ b/kubernetes/flux/repositories/helm/rook-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: source.toolkit.fluxcd.io/v1
+apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: rook-release
