add cloudfalred to brew deps

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -32,6 +32,7 @@ tasks:
     vars:
       DEPS: >-
         age
+        cloudflared
         direnv
         fluxcd/tap/flux
         go-task/tap/go-task
